--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,166 @@
-martor
-gunicorn
-beautifulsoup4
-bs4
-colorama
-Django
-fire
-pyflakes
-pylint
-
-
+airdrop-ng==1.1
+airgraph-ng==1.1
+apparmor==2.13.4
+appdirs==1.4.4
+application-utility==1.3.2
+asgiref==3.2.7
+asn1crypto==1.3.0
+astroid==2.4.2
+attrs==19.3.0
+Automat==20.2.0
+bcrypt==3.1.7
+beautifulsoup4==4.9.1
+bs4==0.0.1
+btrfsutil==1.2.0
+CacheControl==0.12.6
+cachetools==4.1.0
+caffeine-ng==3.4.2
+certifi==2020.6.20
+cffi==1.14.2
+chardet==3.0.4
+chrome-gnome-shell==0.0.0
+click==7.1.2
+colorama==0.4.3
+constantly==15.1.0
+contextlib2==0.6.0.post1
+cryptography==2.9.2
+cssselect==1.1.0
+distlib==0.3.1
+distro==1.5.0
+dj-database-url==0.5.0
+Django==3.0.7
+django-heroku==0.3.1
+django-jenkins==0.110.0
+docopt==0.6.2
+duplicity==0.8.12.0
+ewmh==0.1.6
+fasteners==0.15
+filelock==3.0.12
+fire==0.3.1
+flake8==3.8.3
+Flask==0.12.2
+future==0.18.2
+gestures==0.2.2
+Glances==3.1.4.1
+google-api-core==1.16.0
+google-api-python-client==1.8.3
+google-auth==1.16.1
+google-auth-httplib2==0.0.3
+googleapis-common-protos==1.51.0
+goto==1.0
+goto-statement==1.2
+gufw==20.4.0
+gunicorn==20.0.4
+html5lib==0.9999999
+httplib2==0.18.1
+hyperlink==19.0.0
+idna==2.6
+incremental==17.5.0
+iniconfig==1.0.1
+isort==4.3.21
+itemadapter==0.1.0
+itemloaders==1.0.2
+itsdangerous==1.1.0
+jenkins-badges==1.2.0
+Jinja2==2.11.2
+jmespath==0.10.0
+layoutswitcherlib==0.8.8
+lazy-object-proxy==1.4.3
+LibAppArmor==2.13.4
+libmsym==0.2.4
+louis==3.14.0
+lxml==4.5.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+martor==1.4.9
+mccabe==0.6.1
+meson==0.55.1
+monotonic==1.5
+more-itertools==8.4.0
+msgpack==1.0.0
+npyscreen==4.10.5
+numpy==1.19.1
+oauth2client==4.1.3
+ordered-set==3.1.1
+packaging==20.4
+pacman-mirrors==4.16.4
+paramiko==2.7.1
+parsel==1.6.0
+pep517==0.8.2
+pep8==1.7.1
+Pillow==6.2.1
+pinax-badges==3.0.0
+pluggy==0.13.1
+ply==3.11
+progress==1.5
+prompt-toolkit==1.0.14
+Protego==0.1.16
+protobuf==3.12.0
+psutil==5.7.0
+psycopg2==2.8.5
+pwquality==1.4.2
+py==1.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.11
+pycairo==1.19.1
+pycodestyle==2.6.0
+pycparser==2.20
+PyDispatcher==2.0.5
+PyDrive==1.3.1
+pyfiglet==0.8.post1
+pyflakes==2.2.0
+Pygments==2.6.1
+PyGObject==3.36.1
+PyHamcrest==1.9.0
+PyInquirer==1.0.3
+pylint==2.5.3
+PyNaCl==1.3.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+PyQt5==5.15.0
+PyQt5-sip==12.8.0
+pysmbc==1.0.20
+pytest==6.0.1
+python-http-client==3.2.7
+python-xlib==0.27
+pytoml==0.1.21
+pytz==2020.1
+pyxdg==0.26
+PyYAML==5.3.1
+queuelib==1.5.0
+ranger-fm==1.9.3
+regex==2020.7.14
+reportlab==3.5.42
+requests==2.18.4
+retrying==1.3.3
+rope==0.17.0
+rsa==4.0
+Scrapy==2.3.0
+selenium==3.141.0
+sendgrid==6.4.5
+service-identity==18.1.0
+setproctitle==1.1.10
+sip==4.19.22
+six==1.15.0
+soupsieve==1.9.5
+sqlparse==0.3.1
+starkbank-ecdsa==1.0.0
+team==1.0
+termcolor==1.1.0
+toml==0.10.1
+Twisted==20.3.0
+ueberzug==18.1.5
+ufw==0.36
+uritemplate==3.0.1
+urllib3==1.22
+virtualenv==20.0.31
+virtualenv-clone==0.5.4
+w3lib==1.22.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==8.1
+Werkzeug==1.0.1
+whitenoise==5.2.0
+wrapt==1.12.1
+zope.interface==5.1.0
